--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
      alt="blockchain">-->
     <table cellpadding="10px" cellspacing="20px">
         <td>
-            <!-- <img src="https://source.unsplash.com/200x200/?bitcoin,cryptocurrency" alt="My Personal image" style="border-radius:50%"> -->
-            <img src="sohelpic-modified.png" alt="My Personal image" style="border-radius:50%;width: auto;height: 200px;">
+             <img src="https://source.unsplash.com/200x200/?bitcoin,cryptocurrency" alt="My Personal image" style="border-radius:50%"> 
+            <!--img src="sohelpic-modified.png" alt="My Personal image" style="border-radius:50%;width: auto;height: 200px;"--->
             <!-- <img src="sohelpic.jpg" alt="My Personal image"> -->
             <!-- <img src="sohelpic-modified.png" alt="My profile pic" > -->
         </td>
